# zero-os

./: .gitignore  Cargo.toml  Makefile  README.md  build.ps1
.cargo/: config.toml
apps/orbital-web/: Cargo.toml
apps/orbital-web/src/: lib.rs
apps/orbital-web/src/desktop/: input.rs  mod.rs  types.rs  windows.rs  workspaces.rs
apps/orbital-web/www/: desktop.html  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts  worker.js
apps/orbital-web/www/apps/AppRouter/: AppRouter.module.css  AppRouter.tsx
apps/orbital-web/www/apps/TerminalApp/: TerminalApp.module.css  TerminalApp.tsx
apps/orbital-web/www/components/BeginMenu/: BeginMenu.module.css  BeginMenu.tsx
apps/orbital-web/www/components/Desktop/: Desktop.module.css  Desktop.tsx
apps/orbital-web/www/components/Taskbar/: Taskbar.module.css  Taskbar.tsx
apps/orbital-web/www/components/WindowContent/: WindowContent.module.css  WindowContent.tsx
apps/orbital-web/www/desktop/: types.ts
apps/orbital-web/www/hooks/: useSupervisor.ts  useWindows.ts  useWorkspaces.ts
apps/orbital-web/www/processes/: idle.wasm  init.wasm  memhog.wasm  orbital_terminal.wasm  orbital_web.wasm  pingpong.wasm  receiver.wasm  sender.wasm  terminal.wasm
apps/orbital-web/www/styles/: global.css
crates/orbital-apps/: Cargo.toml
crates/orbital-apps/src/: app.rs  error.rs  lib.rs  manifest.rs  runtime.rs
crates/orbital-apps/src/app_protocol/: clock.rs  input.rs  terminal.rs  wire.rs
crates/orbital-axiom/: Cargo.toml
crates/orbital-axiom/src/: commitlog.rs  gateway.rs  lib.rs  replay.rs  syslog.rs  types.rs
crates/orbital-kernel/: Cargo.toml
crates/orbital-kernel/src/: lib.rs
crates/orbital-system-procs/: Cargo.toml
crates/orbital-system-procs/src/: lib.rs
crates/orbital-test-procs/: Cargo.toml
crates/orbital-test-procs/src/: lib.rs
crates/zos-apps/: Cargo.toml
crates/zos-apps/src/: app.rs  error.rs  lib.rs  manifest.rs  runtime.rs
crates/zos-apps/src/app_protocol/: calculator.rs  input.rs  mod.rs  settings.rs  terminal.rs  wire.rs
crates/zos-apps/src/apps/: mod.rs
crates/zos-apps/src/apps/calculator/: mod.rs  state.rs
crates/zos-apps/src/apps/clock/: mod.rs  state.rs
crates/zos-apps/src/apps/settings/: mod.rs  state.rs
crates/zos-apps/src/apps/terminal/: command.rs  mod.rs  state.rs
crates/zos-apps/src/framework/: app.rs  error.rs  manifest.rs  mod.rs  runtime.rs
crates/zos-apps/src/identity/: crypto.rs  mod.rs  network_handlers.rs  pending.rs  response.rs  storage_handlers.rs
crates/zos-apps/src/protocol/: input.rs  mod.rs  serializable.rs  wire_format.rs
crates/zos-apps/tests/: identity_integration.rs  vfs_integration.rs
crates/zos-axiom/: Cargo.toml
crates/zos-axiom/src/: gateway.rs  lib.rs  replay.rs  syslog.rs  types.rs
crates/zos-desktop/: Cargo.toml
crates/zos-desktop/src/: lib.rs  viewport.rs
crates/zos-desktop/src/background/: init.rs  render.rs  renderer.rs  types.rs
crates/zos-desktop/src/background/shaders/: binary.rs  grain.rs  mod.rs  mosaic.rs  pixel.rs  vertex.rs
crates/zos-desktop/src/desktop/: desktop.rs  mod.rs  void.rs
crates/zos-desktop/src/engine/: animation.rs  input.rs  mod.rs  transitions.rs  void_mode.rs  windows.rs
crates/zos-desktop/src/input/: drag.rs  mod.rs  router.rs
crates/zos-desktop/src/math/: camera.rs  mod.rs  style.rs
crates/zos-desktop/src/persistence/: mod.rs  snapshot.rs
crates/zos-desktop/src/transition/: crossfade.rs  easing.rs
crates/zos-desktop/src/window/: manager.rs  region.rs  window.rs
crates/zos-desktop/tests/: integration.rs
crates/zos-init/: Cargo.toml
crates/zos-init/src/: bootstrap.rs  lib.rs
crates/zos-init/src/handlers/: service.rs  supervisor.rs
crates/zos-kernel/: Cargo.toml
crates/zos-kernel-core/: Cargo.toml
crates/zos-kernel-core/src/: capability.rs  invariants.rs  lib.rs  state.rs  step.rs  types.rs
crates/zos-kernel/src/: ipc.rs  lib.rs  replay.rs  syscall.rs  system.rs
crates/zos-kernel/src/core/: ipc.rs  syscall.rs
crates/zos-kernel/src/system/: lifecycle.rs  metrics.rs  mod.rs
crates/zos-kernel/tests/: kernel_tests.rs
crates/zos-network/: Cargo.toml
crates/zos-network/src/: lib.rs
crates/zos-services/: Cargo.toml
crates/zos-services/src/: lib.rs  manifests.rs  test_utils.rs
crates/zos-services/src/services/: mod.rs
crates/zos-services/src/services/identity/: auth.rs  mod.rs  network.rs  network_dispatch.rs  pending.rs  response.rs  tests.rs  utils.rs  vfs_dispatch.rs  vfs_helpers.rs
crates/zos-services/src/services/identity/handlers/: credentials.rs  keys.rs  mod.rs  preferences.rs  registration.rs  session.rs  tier.rs
crates/zos-services/src/services/identity/keystore_dispatch/: delete.rs  exists.rs  list.rs  mod.rs  read.rs  write.rs
crates/zos-services/src/services/identity/pending/: keystore.rs  mod.rs  network.rs  storage.rs
crates/zos-services/src/services/network/: mod.rs
crates/zos-services/src/services/permission/: mod.rs
crates/zos-services/src/services/time/: mod.rs
crates/zos-services/src/services/vfs/: mod.rs  tests.rs
crates/zos-services/src/services/vfs/handlers/: delete.rs  mod.rs  read.rs  write.rs
crates/zos-supervisor-web/: Cargo.toml
crates/zos-supervisor-web/src/: axiom.rs  background.rs  hal.rs  lib.rs  pingpong.rs  worker.rs
crates/zos-supervisor-web/src/supervisor/: axiom_sync.rs  boot.rs  ipc.rs  legacy.rs  metrics.rs  mod.rs  network.rs  spawn.rs  storage.rs
crates/zos-supervisor-web/src/syscall/: mod.rs  result.rs
crates/zos-system-procs/: Cargo.toml
crates/zos-system-procs/src/: lib.rs
crates/zos-unsafe-primitives/: Cargo.toml
crates/zos-unsafe-primitives/src/: allocator.rs  ffi.rs  lib.rs  loom_tests.rs  sync.rs
crates/zos-vfs/: Cargo.toml
crates/zos-vfs/src/: bootstrap.rs  lib.rs  storage.rs
crates/zos-vfs/src/client/: async_ops.rs  blocking.rs  mod.rs
crates/zos-vfs/src/core/: error.rs  mod.rs  path.rs  types.rs
crates/zos-vfs/src/ipc/: mod.rs  types.rs
crates/zos-vfs/src/service/: mod.rs  permissions.rs  trait_def.rs
crates/zos-vfs/src/testing/: memory_vfs.rs  mod.rs
(+696 files in other folders)
