[workspace]
resolver = "2"
members = [
    "crates/orbital-apps",
    "crates/orbital-axiom",
    "crates/orbital-desktop",
    "crates/orbital-hal",
    "crates/orbital-init",
    "crates/orbital-kernel",
    "crates/orbital-process",
    "crates/orbital-system-procs",
    "crates/orbital-web",
    "tools/dev-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/orbital-os"

[workspace.dependencies]
# Internal crates
orbital-apps = { path = "crates/orbital-apps" }
orbital-axiom = { path = "crates/orbital-axiom" }
orbital-desktop = { path = "crates/orbital-desktop" }
orbital-hal = { path = "crates/orbital-hal" }
orbital-init = { path = "crates/orbital-init" }
orbital-kernel = { path = "crates/orbital-kernel" }
orbital-process = { path = "crates/orbital-process" }
orbital-system-procs = { path = "crates/orbital-system-procs" }

# External dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "Crypto",
    "Worker",
    "MessageEvent",
    "ErrorEvent",
    "HtmlCanvasElement",
    "Document",
    "Request",
    "RequestInit",
    "Headers",
    "RequestMode",
    "Response",
] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Dev server dependencies
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
axum = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
