[workspace]
resolver = "2"
members = [
    "crates/zos-apps",
    "crates/zos-axiom",
    "crates/zos-desktop",
    "crates/zos-hal",
    "crates/zos-init",
    "crates/zos-kernel",
    "crates/zos-process",
    "crates/zos-system-procs",
    "crates/zos-supervisor-web",
    "tools/dev-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cypher-asi/zero-os"

[workspace.dependencies]
# Internal crates
zos-apps = { path = "crates/zos-apps" }
zos-axiom = { path = "crates/zos-axiom" }
zos-desktop = { path = "crates/zos-desktop" }
zos-hal = { path = "crates/zos-hal" }
zos-init = { path = "crates/zos-init" }
zos-kernel = { path = "crates/zos-kernel" }
zos-process = { path = "crates/zos-process" }
zos-system-procs = { path = "crates/zos-system-procs" }

# External dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "Crypto",
    "Worker",
    "MessageEvent",
    "ErrorEvent",
    "HtmlCanvasElement",
    "Document",
    "Request",
    "RequestInit",
    "Headers",
    "RequestMode",
    "Response",
] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Dev server dependencies
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
axum = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
