[workspace]
resolver = "2"
members = [
    "crates/zos-allocator",
    "crates/zos-apps",
    "crates/zos-axiom",
    "crates/zos-desktop",
    "crates/zos-hal",
    "crates/zos-identity",
    "crates/zos-init",
    "crates/zos-ipc",
    "crates/zos-kernel",
    "crates/zos-kernel-core",
    "crates/zos-network",
    "crates/zos-process",
    "crates/zos-services",
    "crates/zos-system-procs",
    "crates/zos-supervisor",
    "crates/zos-unsafe-primitives",
    "crates/zos-vfs",
    "tools/dev-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cypher-asi/zero-os"

[workspace.dependencies]
# Internal crates
zos-allocator = { path = "crates/zos-allocator" }
zos-apps = { path = "crates/zos-apps" }
zos-axiom = { path = "crates/zos-axiom" }
zos-desktop = { path = "crates/zos-desktop" }
zos-hal = { path = "crates/zos-hal" }
zos-identity = { path = "crates/zos-identity" }
zos-init = { path = "crates/zos-init" }
zos-ipc = { path = "crates/zos-ipc" }
zos-kernel = { path = "crates/zos-kernel" }
zos-kernel-core = { path = "crates/zos-kernel-core" }
zos-network = { path = "crates/zos-network" }
zos-process = { path = "crates/zos-process" }
zos-services = { path = "crates/zos-services" }
zos-system-procs = { path = "crates/zos-system-procs" }
zos-unsafe-primitives = { path = "crates/zos-unsafe-primitives" }
zos-vfs = { path = "crates/zos-vfs" }

# External dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
    "Crypto",
    "Worker",
    "MessageEvent",
    "ErrorEvent",
    "HtmlCanvasElement",
    "Document",
    "Request",
    "RequestInit",
    "Headers",
    "RequestMode",
    "Response",
] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# zid-crypto and its WASM-compatible dependencies
zid-crypto = { path = "../zero-id/crates/zid-crypto" }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }

# Dev server dependencies
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
axum = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
