[package]
name = "zos-apps"
version = "0.1.0"
edition = "2021"
description = "Application framework for Zero OS - ZeroApp trait, AppRuntime, and app protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"

[[bin]]
name = "calculator"
path = "src/bin/calculator.rs"

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"

[[bin]]
name = "permission_manager"
path = "src/bin/permission_manager.rs"

[[bin]]
name = "identity_service"
path = "src/bin/identity_service.rs"

[[bin]]
name = "settings"
path = "src/bin/settings.rs"

[[bin]]
name = "vfs_service"
path = "src/bin/vfs_service.rs"

[[bin]]
name = "time_service"
path = "src/bin/time_service.rs"

[[bin]]
name = "network_service"
path = "src/bin/network_service.rs"

[dependencies]
zos-process = { path = "../zos-process" }
zos-identity = { path = "../zos-identity" }
zos-network = { path = "../zos-network" }
zos-vfs = { path = "../zos-vfs" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]

[features]
default = []
