[package]
name = "zos-apps"
version = "0.1.0"
edition = "2021"
description = "Application framework for Zero OS - ZeroApp trait, AppRuntime, and app protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"

[[bin]]
name = "calculator"
path = "src/bin/calculator.rs"

[[bin]]
name = "terminal"
path = "src/bin/terminal.rs"

[[bin]]
name = "settings"
path = "src/bin/settings.rs"

[dependencies]
zos-process = { path = "../zos-process" }
zos-identity = { path = "../zos-identity" }
zos-ipc = { path = "../zos-ipc" }
zos-network = { path = "../zos-network" }
zos-vfs = { path = "../zos-vfs" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = "2.0"
uuid = { version = "1.20", default-features = false }

[dev-dependencies]

[features]
default = []
