[package]
name = "zos-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for Zero OS"

[features]
default = []
std = []

[dependencies]
zos-axiom.workspace = true
zos-hal.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
