[package]
name = "zos-network"
description = "Network types and client for Zero OS - HTTP requests via Network Service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
std = []

[dependencies]
serde = { workspace = true }
