[package]
name = "zos-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Virtual filesystem layer for Zero OS - hierarchical paths, inodes, storage"

[lib]
crate-type = ["rlib"]

# Note: Browser-specific IndexedDB access is now handled by ZosStorage (JS)
# and accessed through HAL methods in zos-supervisor.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
zos-ipc = { path = "../zos-ipc" }
zos-process = { path = "../zos-process" }

[dev-dependencies]
